# poe-data-mcp

./: CHANGELOG.md  README.md  TOOLS.md  examples.md  mcp.json.example  pyproject.toml  server.json  server.py
.github/workflows/: publish-mcp.yml
poe_data_mcp/: __init__.py  __main__.py  server.py
poe_data_mcp/sources/: wiki.py  youtube.py
poe_data_mcp/sources/crafting/: craftofexile.py
poe_data_mcp/sources/economy/: __init__.py  pricing.py
poe_data_mcp/sources/env/: __init__.py  maps.py  scarabs.py
poe_data_mcp/sources/mods/: item_mods.py
poe_data_mcp/sources/player/: gems.py  items.py  passives.py  pob.py
poemcp/: __init__.py  __main__.py  server.py
poemcp/sources/: wiki.py
poemcp/sources/crafting/: craftofexile.py
poemcp/sources/economy/: __init__.py  pricing.py
poemcp/sources/env/: __init__.py  maps.py  scarabs.py
poemcp/sources/mods/: item_mods.py
poemcp/sources/player/: gems.py  items.py  passives.py  pob.py
scrapers/: reddit.py  youtube.py
scrapers/economy/: pricing.py
scrapers/env/: maps.py
scrapers/player/: pob.py
sources/: wiki.py  youtube.py
sources/crafting/: craftofexile.py
sources/economy/: __init__.py  pricing.py
sources/env/: __init__.py  maps.py  scarabs.py
sources/mods/: item_mods.py
sources/player/: gems.py  items.py  passives.py  pob.py
