[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poe-data-mcp"
version = "0.2.0"
description = "MCP server for Path of Exile game data - wiki, economy, and Craft of Exile lookups"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Charles Lucas", email = "zerosquaredio@gmail.com" }]
keywords = ["mcp", "path-of-exile", "poe", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]",
    "httpx",
    "beautifulsoup4",
    "platformdirs>=3",
    "yt-dlp",
]

[project.urls]
Homepage = "https://github.com/charleslucas/poe-data-mcp"
Repository = "https://github.com/charleslucas/poe-data-mcp"

[project.scripts]
poe-data-mcp = "poe_data_mcp.server:main"

[tool.setuptools.packages.find]
include = ["poe_data_mcp*"]
